--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <body>
     <header>SPORTS CLUB</header>
     <main id="alertId">
-      <!-- <div class="alert">
+      <div class="alert">
         <div class="alert-msg">
           <strong style="display: none">✔️ Successully </strong>Updated!!
         </div>
         <button type="button">X</button>
-      </div> -->
+      </div>
 
       <div class="input-flx">
         <input
